external runtime option added

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   },
   "scripts": {
     "build": "npm run build:bundle && npm run build:dts && npm run build:sdk",
-    "build:bundle": "webpack --mode production --display-modules",
+    "build:bundle": "webpack --mode production --display-modules --progress",
     "build:dts": "node scripts/build-dts && tsc --noEmit --target ESNEXT --module commonjs --experimentalDecorators tests/require/index-release",
     "build:sdk": "node scripts/build-sdk",
     "clean": "node scripts/clean",
